test/corpus/comments.txt
==================
single line comment
==================
<%# this is a comment %>
---

(template
  (comment_directive
    (comment)))

==================
multiline comment
==================
<%#
  this comment
  spans lines
%>
body
---

(template
  (comment_directive
    (comment))
  (content))

==================
comment with trim
==================
<%#- silent -%>
---

(template
  (comment_directive
    (comment)))

==================
empty comment
==================
<%# %>
---

(template
  (comment_directive
    (comment)))
