test/corpus/escapes.txt
==================
Escaped open delimiter in content
==================
literal <%% stays as text
---

(template
  (content))


==================
Escaped close delimiter inside code
==================
<% before %%> after %>
---

(template
  (directive
    (code
      (identifier)
      (identifier))))


==================
Both escapes mixed in content
==================
prefix <%% middle %%> suffix
---

(template
  (content))
