test/corpus/parameters.txt
==================
Parameter tag with single param
==================
<%- | $x | -%>
hello <%= $x %>
---

(template
  (parameter_directive
    (parameter_list
      (parameter
        name: (parameter_name))))
  (content)
  (output_directive
    (code
      (variable))))

==================
Parameter tag with default value
==================
<%- | $x, $y = 'default' | -%>
body
---

(template
  (parameter_directive
    (parameter_list
      (parameter
        name: (parameter_name))
      (parameter
        name: (parameter_name)
        default: (parameter_default))))
  (content))

==================
Parameter tag with type annotations
==================
<%- |
  String       $name,
  Integer      $count,
  Array[String] $items,
| -%>
done
---

(template
  (parameter_directive
    (parameter_list
      (parameter
        type: (parameter_type
          type: (type_name))
        name: (parameter_name))
      (parameter
        type: (parameter_type
          type: (type_name))
        name: (parameter_name))
      (parameter
        type: (parameter_type
          type: (array_type)
          arguments: (array_type_arguments
            value: (type_argument
              (parameter_type
                type: (type_name)))))
        name: (parameter_name))))
  (content))

==================
Parameter tag without trim
==================
<% | $x | %>
plain
---

(template
  (parameter_directive
    (parameter_list
      (parameter
        name: (parameter_name))))
  (content))

==================
Parameter tag with namespaced and bracketed types
==================
<%- |
  Stdlib::Host             $hostname,
  Optional[String]         $user,
  String                   $pass,
| -%>
body
---

(template
  (parameter_directive
    (parameter_list
      (parameter
        type: (parameter_type
          class: (class_name)
          delimiter: (parameter_type_delimiter)
          subtype: (subtype_name))
        name: (parameter_name))
      (parameter
        type: (parameter_type
          type: (type_name)
          arguments: (type_arguments
            value: (type_argument
              (parameter_type
                type: (type_name)))))
        name: (parameter_name))
      (parameter
        type: (parameter_type
          type: (type_name))
        name: (parameter_name))))
  (content))

==================
Structured nested parameter types
==================
<%- |
  Test::IP::v4 $addr,
  Hash[String, Optional[Test::IP::v4]] $map,
  Struct[{address => Stdlib::IP::Address::V4, ports => Array[Integer]}] $cfg,
| -%>
body
---

(template
  (parameter_directive
    (parameter_list
      (parameter
        (parameter_type
          (class_name)
          (parameter_type_delimiter)
          (subclass_name)
          (parameter_type_delimiter)
          (subtype_name))
        (parameter_name))
      (parameter
        (parameter_type
          (hash_type)
          (hash_type_arguments
            (type_argument
              (parameter_type
                (type_name)))
            (type_argument
              (parameter_type
                (type_name)
                (type_arguments
                  (type_argument
                    (parameter_type
                      (class_name)
                      (parameter_type_delimiter)
                      (subclass_name)
                      (parameter_type_delimiter)
                      (subtype_name))))))))
        (parameter_name))
      (parameter
        (parameter_type
          (hash_type)
          (hash_type_arguments
            (type_argument
              (type_hash
                (type_hash_entry
                  (identifier)
                  (type_argument
                    (parameter_type
                      (class_name)
                      (parameter_type_delimiter)
                      (subclass_name)
                      (parameter_type_delimiter)
                      (subclass_name)
                      (parameter_type_delimiter)
                      (subtype_name))))
                (type_hash_entry
                  (identifier)
                  (type_argument
                    (parameter_type
                      (array_type)
                      (array_type_arguments
                        (type_argument
                          (parameter_type
                            (type_name)))))))))))
        (parameter_name))))
  (content))
