test/corpus/scanner.txt
==================
output directive with percent close inside single string
==================
<%= notice('hello %> world') %>
---

(template
  (output_directive
    (code)))

==================
directive with percent close inside line comment
==================
<% # comment with %> inside
$x %>
---

(template
  (directive
    (code
      (variable))))

==================
empty parameter directive
==================
<%- || -%>
---

(template
  (parameter_directive))

==================
output directive with percent close inside interpolated double string
==================
<%= "value=${x}, %>" %>
---

(template
  (output_directive
    (code)))
