test/corpus/tags.txt
==================
expression tag inline
==================
prefix <%= $value %> suffix
---

(template
  (content)
  (output_directive
    (code
      (variable)))
  (content))

==================
code block tag
==================
<% if $cond { %>
yes
<% } %>
---

(template
  (directive
    (code
      (variable)))
  (content)
  (directive
    (code)))

==================
code block with trim markers
==================
before
<%- $arr.each |$x| { -%>
  item: <%= $x %>
<%- } -%>
after
---

(template
  (content)
  (directive
    (code
      (variable)
      (variable)))
  (content)
  (output_directive
    (code
      (variable)))
  (content)
  (directive
    (code))
  (content))

==================
empty code tag
==================
<%  %>
---

(template
  (directive
    (code)))

==================
expression with lambda using pipes
==================
<%= $list.map |$x| { $x * 2 } %>
---

(template
  (output_directive
    (code
      (variable)
      (variable)
      (variable))))
